chore: commit all pending changes
